--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".TabActivity">
+
+        </activity>
+
+        <activity android:name=".NewTabActivity">
+
+        </activity>
     </application>
 
 </manifest>
