--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.notesrecognition">
+    package="com.example.tabnote">
 
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
@@ -10,12 +10,12 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.NotesRecognition">
-        <activity android:name=".MainActivity">
+        android:theme="@style/Theme.TabNote">
+        <activity android:name=".MainActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,11 +23,13 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".TabActivity">
+        <activity android:name=".TabActivity"
+            android:screenOrientation="landscape">
 
         </activity>
 
-        <activity android:name=".NewTabActivity">
+        <activity android:name=".NewTabActivity"
+            android:screenOrientation="landscape">
 
         </activity>
     </application>
