--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,15 +14,27 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.TabNote">
+        android:usesCleartextTraffic="true"
+        android:theme="@style/Theme.TabNote"
+        tools:targetApi="m">
         <uses-library android:name="org.apache.http.legacy" android:required="false" />
         <activity android:name=".MainActivity"
+            android:screenOrientation="portrait">
+
+        </activity>
+
+        <activity android:name=".StartActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity android:name=".LogInActivity"
+            android:screenOrientation="portrait">
+
         </activity>
 
         <activity android:name=".TabSavedActivity"
