--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,15 +8,15 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
         tools:ignore="ScopedStorage" />
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
-        android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:theme="@style/Theme.TabNote"
-        tools:targetApi="m">
+        tools:targetApi="n">
         <uses-library android:name="org.apache.http.legacy" android:required="false" />
         <activity android:name=".MainActivity"
             android:screenOrientation="portrait">
@@ -37,12 +37,7 @@
 
         </activity>
 
-        <activity android:name=".TabSavedActivity"
-            android:screenOrientation="landscape">
-
-        </activity>
-
-        <activity android:name=".NewTabActivity"
+        <activity android:name=".TabActivity"
             android:screenOrientation="landscape">
 
         </activity>
